fix: content all updated

--- a/content/settings/settings.json
+++ b/content/settings/settings.json
@@ -13,7 +13,7 @@
   "menu_service_charge_description": "",
   "email": "everest-cotati@gmail.com",
   "video_id": "",
-  "story_sub_description": "",
+  "story_sub_description": "Authentic Himalayan cuisine in downtown Cotati",
   "order_online_url": "https://order.toasttab.com/online/everest-indian-cuisine-cotati-572-e-cotati-ave-a",
   "map_latitude": "38.235801",
   "map_longitude": "-122.638752",
